<resources>
    <string name="app_name">SimpleWeatherApp</string>
    <string name="city_name">Waterloo</string>
    <string name="change_city">Change City?</string>
    <string name="temperature">0°</string>
    <string name="details">Sunny</string>
    <string name="btn">Refresh</string>
    <string name="img_desc">Icon displaying the current weather</string>
    <string name="search_hint">Search a City</string>
    <string name="search">Search</string>
    <string name="location">My Location</string>
    <string name="error">Location permissions have been denied</string>
    <string name="current_weather">Current</string>
    <string name="future_forecast">7 Day</string>
    <string name="saved_cities">Saved Cities</string>
</resources>
